@@ -43,6 +43,10 @@ Open Vehicle Monitor System v3 - Change log
   Add unit support
   Add extended signals/multiplexing support
   Add support for enum values.
+  Add OvmsDBC duktape object
+    OvmsDBC.Load
+    OvmsDBC.Unload
+    OvmsDBC.Get
 - OVMS Server v3: Ability to define less frequent MQTT communication to save data charges and power
   Events:
     Excludes clock.* events from being published at the start of every minute.
